Checkstyle test implemented